[gd_scene load_steps=3 format=2]

[ext_resource path="res://Queue.gd" type="Script" id=1]
[ext_resource path="res://Mino.tscn" type="PackedScene" id=2]

[node name="Queue" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 128.0
margin_bottom = 280.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mino" parent="." instance=ExtResource( 2 )]
position = Vector2( 16, 0 )

[node name="Mino2" parent="." instance=ExtResource( 2 )]
position = Vector2( 16, 64 )

[node name="Mino3" parent="." instance=ExtResource( 2 )]
position = Vector2( 16, 128 )

[node name="Mino4" parent="." instance=ExtResource( 2 )]
position = Vector2( 16, 192 )
